# StSy

./: .gitignore  CMakeLists.txt  flake.nix  setup
src/: main.cpp
